chore(gui): Add --enable-native-access=javafx.graphics
JDK-8347744